--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "client": "cd client && npm start",
     "server": "FLASK_APP=server flask run",
     "start": "concurrently \"yarn client\" \"yarn server\""
+  },
+  "dependencies": {
+    "leaflet-routing-machine": "^3.2.12"
   }
 }
