--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "concurrently \"yarn client\" \"yarn server\""
   },
   "dependencies": {
+    "cloudinary-react": "^1.7.0",
     "leaflet-routing-machine": "^3.2.12"
   }
 }
