--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.1.0",
+    "react-parallax": "^3.3.0",
     "react-particles-js": "^3.5.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
