--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@react-leaflet/core": "^1.0.2",
@@ -19,6 +19,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "use-between": "0.0.18",
     "web-vitals": "^1.0.1"
   },
